@@ -1,3 +1,8 @@
+2003-05-06  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* scrollw.tcl (ScrolledWindow::setwidget): remove any existing
+	widget before setting the next.
+
 2003-05-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tree.tcl (Tree::configure, Tree::_draw_node): add a full-width
